--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "@tippyjs/react": "^4.2.0",
     "axios": "^0.21.1",
     "emoji-picker-react": "^3.4.2",
     "node-sass": "^4.14.1",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.1",
     "react-scroll-to-bottom": "^4.1.0",
     "react-toastify": "^7.0.1",
+    "react-tooltip": "^4.2.14",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
