--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "react-medium-image-zoom": "^4.3.1",
+    "react-paginate": "^7.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
