--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@tippyjs/react": "^4.2.0",
     "axios": "^0.21.1",
     "emoji-picker-react": "^3.4.2",
+    "lodash": "^4.17.21",
+    "lodash.chunk": "^4.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
