--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "emoji-picker-react": "^3.4.2",
     "lodash": "^4.17.21",
     "lodash.chunk": "^4.2.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -30,6 +29,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.47.0",
     "socket.io-client": "^3.1.1",
     "web-vitals": "^0.2.4"
   },
